--- a/samples.sciter/reactor-router/route.html
+++ b/samples.sciter/reactor-router/route.html
@@ -4,6 +4,11 @@
 <head>
 
 <style> 
+	div.link{
+		behavior: clickable;
+		cursor:pointer;
+		display:inline-block;
+	}
 </style>
 <script type="module" src="route.js"></script>
 </head>
